--- a/DataEmpirical/ReplicateExperiments.ipynb
+++ b/DataEmpirical/ReplicateExperiments.ipynb
@@ -6,108 +6,184 @@
    "source": [
     "# Replicate experiments \n",
     "\n",
-    "## mammalian dataset\n",
+    "Parameter of inference (Ncat, number of points, burn-in) are located in _config.yaml_\n",
     "\n",
-    "Parameter of inference (Ncat, number of points, burn-in) are located in config.yaml\n",
+    "All the dataset (tree, alignments, ...) *must be* in the folder given in the parameter '--name'\n",
     "\n",
-    "All the dataset (tree, alignments, ...) *must be* in the folder 'OrthoMan'\n",
+    "The filename of the rootedtree (in newick format) *must be* provided throught the parameter '--tree'\n",
     "\n",
-    "CDS files (in .ali format) *must be* in the subfolder 'singlegene_alignments'. \n",
+    "The user defined prefix of the experiment can be provided trought the parameter '--prefix'\n",
     "\n",
-    "The list of the alignment filenames *must be* provided trought the parameter '--cds' \n",
-    "\n",
-    "The filename of the rootedtree (in newick format) *must be* provided trought the parameter '--tree'\n",
-    "\n",
-    "The user defined prefix of the experiment can be provided trought the parameter '--tree'"
+    "## Extract alignnments (Isopods & OrthoMam)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CDS files (in .ali format) are extracted in the subfolder 'singlegene_alignments'. \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sh ./extract_alignments.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## mammalian dataset (with replicates)\n",
+    "\n",
+    "The list of the alignment filenames *must be* provided trought the parameter '--cds' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 replicate_experiments.py --prefix Ncat50 --name OrthoMam --tree rootedtree.lht.nhx --cds cds.highcoverage.list --sample 18 --replicate 4 --lht life_history_traits.tsv --nbr_cpu 4\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Isopods (with replicates)\n",
+    "\n",
+    "The list of the alignment filenames *must be* provided trought the parameter '--cds' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 replicate_experiments.py --prefix Ncat50 --name Isopods --tree rootedtree.nhx --cds cds.highcoverage.list --sample 12 --replicate 4 --nbr_cpu 4\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Primates (no replicate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 empirical_experiment.py --prefix IWCat50LHT --name Primates --cds CDS.ali --tree rootedtree.nhx --lht life_history_traits.tsv --nbr_cpu 4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 empirical_experiment.py --prefix IWCat50LHTCalib --name Primates --cds CDS.ali --tree rootedtree.nhx --lht life_history_traits.tsv --calibs calibs.tsv --nbr_cpu 4\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom made experiment\n",
+    "\n",
+    "With replicates:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77 extant species found for the rooted tree/\n",
-      "14358 CDS provided.\n",
-      "Life-History-Traits file provided (life_history_traits.tsv)\n",
-      "Fossil Calibrations file provided (calibs.lht.tsv)\n",
-      "77 taxa for replicate 1\n",
-      "cd /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0 && ./snakeslurm.sh\n",
-      "\u001b[33mBuilding DAG of jobs...\u001b[0m\n",
-      "\u001b[33mUsing shell: /bin/bash\u001b[0m\n",
-      "\u001b[33mProvided cores: 4\u001b[0m\n",
-      "\u001b[33mRules claiming more threads will be scaled down.\u001b[0m\n",
-      "\u001b[33mJob counts:\n",
-      "\tcount\tjobs\n",
-      "\t1\tall\n",
-      "\t1\tall_correlation_matrix\n",
-      "\t2\tplot_correlation_matrix\n",
-      "\t1\tplot_traces\n",
-      "\t1\tplot_trees\n",
-      "\t2\tread_trees\n",
-      "\t4\trun_inference\n",
-      "\t12\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:32:27 2019]\u001b[0m\n",
-      "\u001b[32mrule run_inference:\n",
-      "    input: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aamutsel, /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/config.INFERENCE\n",
-      "    output: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_2_run\n",
-      "    log: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_2_run.stdout, /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_2_run.stderr\n",
-      "    jobid: 7\n",
-      "    benchmark: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/benchmarks.inference.aa_False_2_run.tsv\n",
-      "    wildcards: model=aa, polymorphism=False, chain=2\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33m/home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aamutsel -a /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/CDS.ali -t /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/rootedtree.nhx  -u 4000 --precision 12 --ncat 40 /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_2_run 2> /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_2_run.stderr 1> /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_2_run.stdout\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:32:27 2019]\u001b[0m\n",
-      "\u001b[32mrule run_inference:\n",
-      "    input: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/nodemutsel, /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/config.INFERENCE\n",
-      "    output: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_1_run\n",
-      "    log: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_1_run.stdout, /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_1_run.stderr\n",
-      "    jobid: 4\n",
-      "    benchmark: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/benchmarks.inference.node_False_1_run.tsv\n",
-      "    wildcards: model=node, polymorphism=False, chain=1\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33m/home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/nodemutsel -a /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/CDS.ali -t /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/rootedtree.nhx  -u 4000 --precision 12 --ncat 40 --traitsfile /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/life_history_traits.tsv --fossils /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/calibs.tsv /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_1_run 2> /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_1_run.stderr 1> /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_1_run.stdout\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:32:27 2019]\u001b[0m\n",
-      "\u001b[32mrule run_inference:\n",
-      "    input: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aamutsel, /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/config.INFERENCE\n",
-      "    output: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_1_run\n",
-      "    log: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_1_run.stdout, /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_1_run.stderr\n",
-      "    jobid: 5\n",
-      "    benchmark: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/benchmarks.inference.aa_False_1_run.tsv\n",
-      "    wildcards: model=aa, polymorphism=False, chain=1\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33m/home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aamutsel -a /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/CDS.ali -t /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/rootedtree.nhx  -u 4000 --precision 12 --ncat 40 /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_1_run 2> /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_1_run.stderr 1> /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/aa_False_1_run.stdout\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:32:27 2019]\u001b[0m\n",
-      "\u001b[32mrule run_inference:\n",
-      "    input: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/nodemutsel, /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/config.INFERENCE\n",
-      "    output: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_2_run\n",
-      "    log: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_2_run.stdout, /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_2_run.stderr\n",
-      "    jobid: 6\n",
-      "    benchmark: /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/benchmarks.inference.node_False_2_run.tsv\n",
-      "    wildcards: model=node, polymorphism=False, chain=2\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33m/home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/nodemutsel -a /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/CDS.ali -t /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/rootedtree.nhx  -u 4000 --precision 12 --ncat 40 --traitsfile /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/life_history_traits.tsv --fossils /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/calibs.tsv /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_2_run 2> /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_2_run.stderr 1> /home/thibault/PolyMutSel/DataEmpirical/Experiments/Ncat50_OrthoMam_rootedtree.lht.nhx_cds.lht.list_Sample36_Replicates6_Id0/node_False_2_run.stdout\u001b[0m\n"
+      "usage: replicate_experiments.py [-h] [-p PREFIX] -n NAME --tree TREE --cds CDS\n",
+      "                                [--sample SAMPLE] [--replicate REPLICATE]\n",
+      "                                [--lht LHT] [--calibs CALIBS]\n",
+      "                                [--intersection INTERSECTION] [-s SCREEN]\n",
+      "                                [-b SBATCH] [-c NBR_CPU]\n",
+      "                                [--random_state RANDOM_STATE]\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help            show this help message and exit\n",
+      "  -p PREFIX, --prefix PREFIX\n",
+      "  -n NAME, --name NAME\n",
+      "  --tree TREE\n",
+      "  --cds CDS\n",
+      "  --sample SAMPLE\n",
+      "  --replicate REPLICATE\n",
+      "  --lht LHT\n",
+      "  --calibs CALIBS\n",
+      "  --intersection INTERSECTION\n",
+      "  -s SCREEN, --screen SCREEN\n",
+      "  -b SBATCH, --sbatch SBATCH\n",
+      "  -c NBR_CPU, --nbr_cpu NBR_CPU\n",
+      "  --random_state RANDOM_STATE\n"
      ]
     }
    ],
    "source": [
-    "!python3 replicate_experiments.py --prefix Ncat50 --name OrthoMam --tree rootedtree.lht.nhx --cds cds.lht.list --sample 36 --replicate 6 --lht life_history_traits.tsv --calibs calibs.lht.tsv --nbr_cpu 4\n"
+    "!python3 replicate_experiments.py --help"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Primate dataset"
+    "Without replicates: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: empirical_experiment.py [-h] [-p PREFIX] -n NAME --cds CDS --tree TREE\n",
+      "                               [--lht LHT] [--calibs CALIBS] [-s SCREEN]\n",
+      "                               [-b SBATCH] [-c NBR_CPU]\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help            show this help message and exit\n",
+      "  -p PREFIX, --prefix PREFIX\n",
+      "  -n NAME, --name NAME\n",
+      "  --cds CDS\n",
+      "  --tree TREE\n",
+      "  --lht LHT\n",
+      "  --calibs CALIBS\n",
+      "  -s SCREEN, --screen SCREEN\n",
+      "  -b SBATCH, --sbatch SBATCH\n",
+      "  -c NBR_CPU, --nbr_cpu NBR_CPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 empirical_experiment.py --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis of the different replicates"
    ]
   },
   {
@@ -116,14 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 replicate_experiments.py --prefix Ncat50 --name Primates --tree rootedtree.nhx --sample 14 --replicate 6 --lht life_history_traits.tsv --calibs calibs.tsv --nbr_cpu 4\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Custom made experiment"
+    "!cd ../scripts && python3 replicate_analysis.py"
    ]
   },
   {
@@ -131,9 +200,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!python3 empirical_experiment.py --prefix Ncat50 --name Primates --tree rootedtree.nhx --cds CDS.ali --lht life_history_traits.tsv --calibs calibs.tsv\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -156,5 +223,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
