Simulated experiments instructions

--- a/DataEmpirical/ReplicateExperiments.ipynb
+++ b/DataEmpirical/ReplicateExperiments.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 replicate_experiments.py --prefix Ncat50 --name OrthoMam --tree rootedtree.lht.nhx --cds cds.highcoverage.list --sample 18 --replicate 4 --lht life_history_traits.tsv --nbr_cpu 4\n"
+    "!python3 replicate_experiments.py --prefix Cat50 --name OrthoMam --tree rootedtree.lht.nhx --cds cds.highcoverage.list --sample 18 --replicate 4 --lht life_history_traits.tsv --nbr_cpu 4\n"
    ]
   },
   {
