--- a/DataSimulated/ReplicateExperiment.ipynb
+++ b/DataSimulated/ReplicateExperiment.ipynb
@@ -6,131 +6,60 @@
    "source": [
     "# Replicate experiments \n",
     "\n",
-    "## Simulated dataset\n"
+    "Renaming necessary for compatibility with v1.0 of SimuEvol (executable renaming)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cd /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50 && ./snakeslurm.sh\n",
-      "\u001b[33mlocalrules directive specifies rules that are not present in the Snakefile:\n",
-      "\tinit_simulation\n",
-      "\u001b[0m\n",
-      "\u001b[33mBuilding DAG of jobs...\u001b[0m\n",
-      "\u001b[33mUsing shell: /bin/bash\u001b[0m\n",
-      "\u001b[33mProvided cores: 4\u001b[0m\n",
-      "\u001b[33mRules claiming more threads will be scaled down.\u001b[0m\n",
-      "\u001b[33mJob counts:\n",
-      "\tcount\tjobs\n",
-      "\t1\tall\n",
-      "\t1\tall_traces\n",
-      "\t1\tall_trees\n",
-      "\t2\tbayescode_model\n",
-      "\t3\tdraw_fossils\n",
-      "\t1\tmake_bayescode\n",
-      "\t1\tmake_simuevol\n",
-      "\t3\tplot_simulation\n",
-      "\t3\tplot_traces\n",
-      "\t3\tplot_trees\n",
-      "\t6\tread_trees\n",
-      "\t12\trun_inference\n",
-      "\t3\trun_simulation\n",
-      "\t40\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mlocalrule make_bayescode:\n",
-      "    input: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/bayescode.version\n",
-      "    output: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/make_bayescode\n",
-      "    log: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.bayescode.stdout, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.bayescode.stderr\n",
-      "    jobid: 39\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33mcd /home/thibault/PolyMutSel/bayescode  2> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.bayescode.stderr 1> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.bayescode.stdout\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mlocalrule make_simuevol:\n",
-      "    input: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuEvol.version\n",
-      "    output: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuDiv, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuFold, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuPoly\n",
-      "    log: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuEvol.stdout, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuEvol.stderr\n",
-      "    jobid: 33\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33mcd /home/thibault/PolyMutSel/SimuEvol  2> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuEvol.stderr 1> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuEvol.stdout && cp build/SimuDiv /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50 && cp build/SimuPoly /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50 && cp build/SimuFold /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50\u001b[0m\n",
-      "\u001b[33mTouching output file /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/make_bayescode.\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mFinished job 39.\u001b[0m\n",
-      "\u001b[32m1 of 40 steps (2%) done\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mlocalrule bayescode_model:\n",
-      "    input: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/make_bayescode\n",
-      "    output: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/aamutsel, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/readaamutsel\n",
-      "    jobid: 36\n",
-      "    wildcards: model=aa\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33mcd /home/thibault/PolyMutSel/bayescode && cp _build/aamutsel /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50 && cp _build/readaamutsel /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mlocalrule bayescode_model:\n",
-      "    input: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/make_bayescode\n",
-      "    output: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/nodemutsel, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/readnodemutsel\n",
-      "    jobid: 34\n",
-      "    wildcards: model=node\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33mcd /home/thibault/PolyMutSel/bayescode && cp _build/nodemutsel /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50 && cp _build/readnodemutsel /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mFinished job 36.\u001b[0m\n",
-      "\u001b[32m2 of 40 steps (5%) done\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mFinished job 34.\u001b[0m\n",
-      "\u001b[32m3 of 40 steps (8%) done\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mFinished job 33.\u001b[0m\n",
-      "\u001b[32m4 of 40 steps (10%) done\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mrule run_simulation:\n",
-      "    input: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuPoly, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/config.SIMULATION, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/config.SimuPoly, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/np_5000_30.prefs\n",
-      "    output: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuPoly_exp\n",
-      "    log: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuPoly_exp.stdout, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuPoly_exp.stderr\n",
-      "    jobid: 12\n",
-      "    benchmark: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/benchmarks.simulation.SimuPoly.tsv\n",
-      "    wildcards: simumode=SimuPoly\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33m/home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuPoly --newick /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/placnr.short.rootedtree.nhx --nuc_matrix /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/nucleotide_GTR.tsv --precision_matrix /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/precision3x3.tsv --mutation_rate_per_generation 1e-08 --root_age 300e6 --generation_time 10 --exon_size 300 --seed 653 --population_size 5000 --beta 1.0 --sample_size 20 --noise_sigma 0.0 --noise_theta 0.9 --preferences /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/np_5000_30.prefs --output /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuPoly_exp 2> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuPoly_exp.stderr 1> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuPoly_exp.stdout\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mrule run_simulation:\n",
-      "    input: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuDiv, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/config.SIMULATION, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/config.SimuDiv, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/np_5000_30.prefs\n",
-      "    output: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuDiv_exp\n",
-      "    log: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuDiv_exp.stdout, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuDiv_exp.stderr\n",
-      "    jobid: 13\n",
-      "    benchmark: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/benchmarks.simulation.SimuDiv.tsv\n",
-      "    wildcards: simumode=SimuDiv\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33m/home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuDiv --newick /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/placnr.short.rootedtree.nhx --nuc_matrix /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/nucleotide_GTR.tsv --precision_matrix /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/precision3x3.tsv --mutation_rate_per_generation 1e-08 --root_age 300e6 --generation_time 10 --exon_size 300 --seed 653 --nbr_grid_step 100 --beta 1.0 --preferences /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/np_5000_30.prefs --output /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuDiv_exp 2> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuDiv_exp.stderr 1> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuDiv_exp.stdout\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[32m[Tue Oct 22 23:37:42 2019]\u001b[0m\n",
-      "\u001b[32mrule run_simulation:\n",
-      "    input: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuFold, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/config.SIMULATION, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/config.SimuFold, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/np_5000_30.prefs\n",
-      "    output: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuFold_exp\n",
-      "    log: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuFold_exp.stdout, /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuFold_exp.stderr\n",
-      "    jobid: 14\n",
-      "    benchmark: /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/benchmarks.simulation.SimuFold.tsv\n",
-      "    wildcards: simumode=SimuFold\u001b[0m\n",
-      "\u001b[32m\u001b[0m\n",
-      "\u001b[33m/home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuFold --newick /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/placnr.short.rootedtree.nhx --nuc_matrix /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/nucleotide_GTR.tsv --precision_matrix /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/precision3x3.tsv --mutation_rate_per_generation 1e-08 --root_age 300e6 --generation_time 10 --exon_size 300 --seed 653 --nbr_grid_step 100 --population_size 1e5 --pdb_folder /home/thibault/PolyMutSel/SimuEvol/data/pdbfiles --nbr_exons 12 --cut_off 7.0 --output /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/SimuFold_exp 2> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuFold_exp.stderr 1> /home/thibault/PolyMutSel/DataSimulated/Experiments/SimulationNcat50/std.SimuFold_exp.stdout\u001b[0m\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "!python3 simulated_experiment.py --experiment SimulationNcat50 --nbr_cpu 4\n"
+    "!cp ../SimuEvol/build/SimuProfile ../SimuEvol/build/SimuDiv\n",
+    "!cp ../SimuEvol/build/PolyProfile ../SimuEvol/build/SimuPoly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulated dataset\n",
+    "\n",
+    "Simulations where traits (effective population size, mutation rate, generation time) are fluctuating along each branch during the simulation (traits are changing every generation)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 simulated_experiment.py --experiment Gen5Ma150L5000 --nbr_cpu 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other simulations where traits (effective population size, mutation rate, generation time) are considered constant for a specific branch during the simulation (traits are changing for each branch)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sed -i 's#BRANCH_WISE_CORRELATION: false#BRANCH_WISE_CORRELATION: true#g' config.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 simulated_experiment.py --experiment Gen5Ma150L5000BranchWise --nbr_cpu 4"
    ]
   },
   {
@@ -161,5 +90,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
